--- a/loan/src/main/resources/application.properties
+++ b/loan/src/main/resources/application.properties
@@ -4,3 +4,4 @@ spring.datasource.driver-class-name=org.h2.Driver
 spring.datasource.url=jdbc:h2:mem:dbtest
 spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.H2Dialect
 spring.jpa.show-sql=true
+spring.jpa.hibernate.ddl-auto=update
