--- a/loan/src/main/resources/application.properties
+++ b/loan/src/main/resources/application.properties
@@ -2,6 +2,13 @@ spring.datasource.username=sa
 spring.datasource.password=
 spring.datasource.driver-class-name=org.h2.Driver
 spring.datasource.url=jdbc:h2:mem:dbtest
+
 spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.H2Dialect
-spring.jpa.show-sql=true
-spring.jpa.hibernate.ddl-auto=update
+spring.jpa.generate-ddl: true
+spring.jpa.hibernate.ddl-auto: create-drop
+spring.jpa.properties.hibernate.format_sql: true
+spring.jpa.show-sql: true
+
+spring.h2.console.settings.web-allow-others=true
+spring.h2.console.path=/h2
+spring.h2.console.enabled=true
