--- a/loan/src/main/resources/application.properties
+++ b/loan/src/main/resources/application.properties
@@ -4,10 +4,10 @@ spring.datasource.driver-class-name=org.h2.Driver
 spring.datasource.url=jdbc:h2:mem:dbtest
 
 spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.H2Dialect
-spring.jpa.generate-ddl: true
-spring.jpa.hibernate.ddl-auto: create-drop
-spring.jpa.properties.hibernate.format_sql: true
-spring.jpa.show-sql: true
+spring.jpa.generate-ddl=false
+spring.jpa.hibernate.ddl-auto= update
+spring.jpa.properties.hibernate.format_sql=fasle
+spring.jpa.show-sql=true
 
 spring.h2.console.settings.web-allow-others=true
 spring.h2.console.path=/h2
