--- a/loan/src/main/resources/application.properties
+++ b/loan/src/main/resources/application.properties
@@ -1,14 +1,24 @@
 spring.datasource.username=sa
 spring.datasource.password=
 spring.datasource.driver-class-name=org.h2.Driver
-spring.datasource.url=jdbc:h2:mem:dbtest
+spring.datasource.url=jdbc:h2:./sample
 
 spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.H2Dialect
-spring.jpa.generate-ddl=false
+#spring.jpa.generate-ddl=true
 spring.jpa.hibernate.ddl-auto= update
 spring.jpa.properties.hibernate.format_sql=fasle
 spring.jpa.show-sql=true
-
 spring.h2.console.settings.web-allow-others=true
 spring.h2.console.path=/h2
 spring.h2.console.enabled=true
+
+#spring.thymeleaf.check-template-location=true 
+#spring.thymeleaf.prefix=classpath:/templates/ 
+#spring.thymeleaf.excluded-view-names=    
+spring.thymeleaf.mode=HTML5
+spring.thymeleaf.encoding=UTF-8
+spring.thymeleaf.content-type=text/html    
+spring.thymeleaf.cache=true
+spring.devtools.restart.exclude=resources/**
+
+spring.jackson.default-property-inclusion=non-empty
